# -*- mode: org -*-

* 0.1.5    UNRELEASED


* 0.1.4    2025-04-02

+ Remove the ls_remote parameter (#99)
+ Provide interface to add annotations to the DAG (#100)
+ Add git rebase --onto example (#98)
  + Change the -R cla to take a range expression (#97)
+ Add option to change config file name (#93)

** Bugfixes

+ Fix problem with tree connectivity visualization (#95)

* 0.1.3    2025-03-28

+ Store user-parameters in a configuration file (#4)
+ Add a new flag to show PRs heads (#86)
+ Add command-line flag to embed the SVG in HTML (#82, #81)

** Bugfixes

+ Verify repository path before processing (#87)
+ Fix stash creation in unit tests (#84)

* 0.1.2    2025-03-22

+ Add example: git internals (#64, #79)
  + Show standalone blons and trees
  + Add CSS and JS for displaying SVGs in the docs
+ Add py.typed file (#74)

** Bugfixes

+ Fix how HEAD is visualized (#76)
+ Fix Command-line interface section in docs (#72)

* 0.1.1    2025-03-11

+ Add label to the root node of the git notes DAG (#68)
+ Handle empty repository without raising an exception (#65)
+ Add sphinx docs (#1)
+ Rename module pydantic_models (#61)

** Bugfixes

+ Bugfix: CustomArgparseNamespace misused in CLI (#70)

* 0.1.0    2025-03-07

+ Add integration tests with real repositories (#59)
+ Add unit tests that verify the created dag (#55)

** Bugfixes

+ Fix problem with escapes in tooltips (#57)
+ Handle tags referring to other tags (#51)
+ Fix tree info parser

* 0.0.9    2025-02-25

** Bugfixes

+ Fix python version dependency in pyproject.toml (#47)

* 0.0.8    2025-02-25

+ Add commits field to GitRepository (#41)
+ Add scaffolding for unit tests (#2)

** Bugfixes

+ Fix regex for tag info groups (#43)
+ Handle errors during decoding (#42)
+ Handle empty repository (#39)
+ Display only reachable stash-commits (#37)

* 0.0.7    2025-02-20

+ Rename --commit-message CLI flag (#19)
+ Form tooltips without using misc_info (#33)
+ Handle repositories cloned using --depth 1 (#26)

** Bugfixes
